# ChangeLog for app-xemacs/zenirc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/zenirc/ChangeLog,v 1.4 2003/10/03 02:47:51 agriffis Exp $

  02 Oct 2003; Aron Griffis <agriffis@gentoo.org> zenirc-1.13.ebuild:
  Stable on alpha

*zenirc-1.13 (16 Dec 2002)

  22 Feb 2003;  <rendhalver@gentoo.org> zenirc-1.13.ebuild :
  Add ~alpha to KEYWORDS

  16 Dec 2002; Rendhalver [Peter Brown] <rendhalver@gentoo.org> :
  Initial import.