@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/viper/Attic/viper-1.35.ebuild,v 1.6 2004/03/13 00:15:37 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/viper/Attic/viper-1.35.ebuild,v 1.7 2004/03/31 23:19:00 lv Exp $
 
 SLOT="0"
 IUSE=""
@@ -9,7 +9,7 @@ PKG_CAT="standard"
 
 DEPEND="app-xemacs/xemacs-base
 "
-KEYWORDS="x86 ~ppc alpha sparc"
+KEYWORDS="x86 ~ppc alpha sparc ~amd64"
 
 inherit xemacs-packages
 
