@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/xslide/Attic/xslide-1.04.ebuild,v 1.3 2004/03/13 00:15:38 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/xslide/Attic/xslide-1.04.ebuild,v 1.4 2004/03/31 23:15:52 lv Exp $
 
 SLOT="0"
 IUSE=""
@@ -11,7 +11,7 @@ DEPEND="app-xemacs/xemacs-ispell
 app-xemacs/mail-lib
 app-xemacs/xemacs-base
 "
-KEYWORDS="x86 ~ppc alpha sparc"
+KEYWORDS="x86 ~ppc alpha sparc ~amd64"
 
 inherit xemacs-packages
 
