@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/zenirc/Attic/zenirc-1.13.ebuild,v 1.6 2004/03/13 00:15:38 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/zenirc/Attic/zenirc-1.13.ebuild,v 1.7 2004/03/31 23:12:31 lv Exp $
 
 SLOT="0"
 IUSE=""
@@ -8,7 +8,7 @@ DESCRIPTION="ZENIRC IRC Client."
 PKG_CAT="standard"
 
 DEPEND=""
-KEYWORDS="x86 ~ppc alpha sparc"
+KEYWORDS="x86 ~ppc alpha sparc ~amd64"
 
 inherit xemacs-packages
 
