@@ -1,6 +1,9 @@
 # ChangeLog for app-xemacs/zenirc
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/zenirc/ChangeLog,v 1.4 2003/10/03 02:47:51 agriffis Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/zenirc/ChangeLog,v 1.5 2004/03/31 23:12:31 lv Exp $
+
+  31 Mar 2004; Travis Tilley <lv@gentoo.org> zenirc-1.13.ebuild:
+  added ~amd64 to KEYWORDS
 
   02 Oct 2003; Aron Griffis <agriffis@gentoo.org> zenirc-1.13.ebuild:
   Stable on alpha
